Fix: overflow issue with index sec-d

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,8 +42,8 @@
     color: var(--theme3);
 }
 /* ------------------------------------Base-styling */
-body {
-    overflow-x: hidden;
+.nav {
+    width: auto;
 }
 
 
@@ -243,10 +243,10 @@ body {
 
 @keyframes card-zoom {
     from{
-        transform: scale(0.9);
+        transform: scale(1);
     }
     to {
-        transform: scale(1.0);
+        transform: scale(0.9);
     }
 }
 /* ------------------------------------Products-styling */
